Store edits in side-car files
Currently the GEGL graph is serialized into XML files stored in: ~/.local/share/gnome-photos/.
This is nice in that it doesn't clutter up the visible user folders with strange looking blobs of XML. However, the hash breaks if the user moves the original file around with a file manager, and then the edits are lost. In that sense it will be better if the edits are stored alongside the originals like Darktable does. That will make it easy for the user to copy the XML along with the original and we won't need to link them together based on the URI's hash.
Edited by Debarshi Ray