local-item: Store edits in side-car files

https://gitlab.gnome.org/GNOME/gnome-photos/issues/87